--- a/shape generator/index.html
+++ b/shape generator/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>shape generator</title>
+  <title>Shape Generator</title>
   <style>
     #container {
       position: relative;
       width: 100%;
       height: 90vh;
       background: #eee;
+      overflow: hidden;
     }
-    .rectangle {
+
+    .rectangle, .circle {
       position: absolute;
-      background: red;
+    }
+
+    .rectangle {
+      background-color: red;
     }
   </style>
 </head>
@@ -25,9 +30,9 @@
 
   <div id="container"></div>
 
-  <script src="rectangle_script.js"></script>
-  <script src="triangle_script.js"></script>
-  <script src="circle_script.js"></script>
+  <!-- Make sure worker.js exists in the same directory -->
+  <script src="main.js"></script>
   <script src="deleteshapes.js"></script>
+
 </body>
 </html>
