added simple style

--- a/shape generator/index.html
+++ b/shape generator/index.html
@@ -33,6 +33,6 @@
   <!-- Make sure worker.js exists in the same directory -->
   <script src="main.js"></script>
   <script src="deleteshapes.js"></script>
-
+  <link rel="stylesheet" href="style.css">
 </body>
 </html>
